Some small tweaks
and documentation. PS BBEdit includes doesn't work yet

--- a/templates/bbedit.tmpl
+++ b/templates/bbedit.tmpl
@@ -1,4 +1,4 @@
-<!-- #bbinclude "#relative#includes/header.html" --><!-- end bbinclude -->
+<!-- #bbinclude "header.html" --><!-- end bbinclude -->
 
     <section id="main">
 
@@ -28,4 +28,4 @@
 
     </section> <!-- /#main -->
 
-<!-- #bbinclude "#relative#includes/header.html" --><!-- end bbinclude -->
+<!-- #bbinclude "footer.html" --><!-- end bbinclude -->
